--- a/_includes/css/search.css
+++ b/_includes/css/search.css
@@ -1,12 +1,3 @@
-search-form {
-
-}
-oom-search::part(input) {
-  border: solid 2px var(--darkgray);
-  border-radius: 4px;
-  padding: .5em;
-  background: none;
-}
 oom-search::part(label) {
   font-weight: bold;
 }
@@ -14,7 +5,7 @@ oom-search::part(input) {
   border: solid 2px var(--lightgray);
   border-radius: 4px;
   padding: .5em;
-  background: lightgrey;
+  background: d0;
 }
 oom-search::part(items) {
   padding: .5em;
