--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,38 @@
 @import "css/post-list.css";
 @import "css/post.css";
 @import "css/tag.css";
+
+@keyframes cursor-blink {
+    0% {
+        background-color: #0F0;
+    }
+    12% {
+        background-color: #FF0;
+    }
+    25% {
+        background-color: #00F;
+    }
+    38% {
+        background-color: #F00;
+    }
+    50% {
+        background-color: #FFF;
+    }
+    62% {
+        background-color: #0FF;
+    }
+    75% {
+        background-color: #F0F;
+    }
+    87% {
+        background-color: #F80;
+    }
+  }
+
+  .box {
+    content: "";
+    width: 12px;
+    height: 20px;
+    display: inline-block;
+    animation: cursor-blink 1.5s steps(1) infinite;
+  } 
