--- a/themes/oceanic-zen/templates/section.html
+++ b/themes/oceanic-zen/templates/section.html
@@ -1,8 +1,18 @@
 {% extends "index.html" %}
 
 {% block main %}
-    {% if section.pages %}
+    {% if section.content %}
+    <article itemscope itemtype="http://schema.org/BlogPosting">
+      <div itemprop="headline">
         <h1>{{ section.title }}</h1>
+        <div class="border"></div>
+      </div>
+      <div itemprop="articleBody">
+        {{ section.content | safe }}
+      </div>
+    </article>
+    {% endif %}
+    {% if section.pages %}
         <div class="border"></div>
         <ul>
         {% for p in section.pages %}
@@ -13,15 +23,5 @@
             </li>
         {% endfor %}
         </ul>
-    {% else %}
-        <article itemscope itemtype="http://schema.org/BlogPosting">
-            <div itemprop="headline">
-                <h1>{{ section.title }}</h1>
-                <div class="border"></div>
-            </div>
-            <div itemprop="articleBody">
-                {{ section.content | safe }}
-            </div>
-        </article>
     {% endif %}
 {% endblock main %}
