Add volleyball seasons from MaxPreps++

--- a/static/stltodaystats/styles.css
+++ b/static/stltodaystats/styles.css
@@ -43,6 +43,17 @@ table#results {
 table#results tr:nth-child(even) { background: #221; }
 table#results tr:nth-child(odd) { background: #111; }
 
+table.gaps {
+    width: 80%;
+    border:solid 1px #999;
+}
+
+table.gaps tr {
+    border:solid 1px #666;
+}
+
+
 ul.schema {
     list-style: none
 }
+
