--- a/themes/oceanic-zen/sass/theme.scss
+++ b/themes/oceanic-zen/sass/theme.scss
@@ -1,32 +1,7 @@
 @import "colors";
 
-@font-face {
-    font-family: 'Iosevka';
-    src: url("/fonts/iosevka-regular.woff2");
-    font-display: swap;
-}
-@font-face {
-    font-family: 'Iosevka';
-    src: url("/fonts/iosevka-italic.woff2");
-    font-style: italic;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'Iosevka';
-    src: url("/fonts/iosevka-bold.woff2");
-    font-weight: bold;
-    font-display: swap;
-}
-@font-face {
-    font-family: 'Iosevka';
-    src: url("/fonts/iosevka-bolditalic.woff2");
-    font-weight: bold;
-    font-style: italic;
-    font-display: swap;
-}
-
-$font: "Iosevka", sans-serif;
-$font-mono:  "Iosevka", monospace;
+$font: sans-serif;
+$font-mono:  monospace;
 $padding: 8px;
 
 body {
@@ -148,7 +123,7 @@ code {
 
 p > code {
     font-weight: bold;
-    color: $gray;
+    color: $white;
 }
 
 .logo {
